--- a/classification.ipynb
+++ b/classification.ipynb
@@ -2,11 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
+    "import numpy as np\n",
+    "from tqdm import tqdm\n",
     "from transformers import pipeline"
    ]
   },
@@ -1993,6 +1995,476 @@
    ],
    "source": [
     "df[~(df['new_categories'].isna())]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\HP\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\huggingface_hub\\file_download.py:157: UserWarning: `huggingface_hub` cache-system uses symlinks by default to efficiently store duplicated files but your machine does not support them in C:\\Users\\HP\\.cache\\huggingface\\hub\\models--facebook--bart-large-mnli. Caching files will still work but in a degraded version that might require more space on your disk. This warning can be disabled by setting the `HF_HUB_DISABLE_SYMLINKS_WARNING` environment variable. For more details, see https://huggingface.co/docs/huggingface_hub/how-to-cache#limitations.\n",
+      "To support symlinks on Windows, you either need to activate Developer Mode or to run Python as an administrator. In order to see activate developer mode, see this article: https://docs.microsoft.com/en-us/windows/apps/get-started/enable-your-device-for-development\n",
+      "  warnings.warn(message)\n"
+     ]
+    }
+   ],
+   "source": [
+    "pipe = pipeline('zero-shot-classification', model='facebook/bart-large-mnli')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Some non-default generation parameters are set in the model config. These should go into a GenerationConfig file (https://huggingface.co/docs/transformers/generation_strategies#save-a-custom-decoding-strategy-with-your-model) instead. This warning will be raised to an exception in v4.41.\n",
+      "Non-default generation parameters: {'forced_eos_token_id': 2}\n"
+     ]
+    }
+   ],
+   "source": [
+    "pipe.save_pretrained('./bart-large-mnli')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'A NOVEL THAT READERS and critics have been eagerly anticipating for over a decade, Gilead is an astonishingly imagined story of remarkable lives. John Ames is a preacher, the son of a preacher and the grandson (both maternal and paternal) of preachers. It’s 1956 in Gilead, Iowa, towards the end of the Reverend Ames’s life, and he is absorbed in recording his family’s story, a legacy for the young son he will never see grow up. Haunted by his grandfather’s presence, John tells of the rift between his grandfather and his father: the elder, an angry visionary who fought for the abolitionist cause, and his son, an ardent pacifist. He is troubled, too, by his prodigal namesake, Jack (John Ames) Boughton, his best friend’s lost son who returns to Gilead searching for forgiveness and redemption. Told in John Ames’s joyous, rambling voice that finds beauty, humour and truth in the smallest of life’s details, Gilead is a song of celebration and acceptance of the best and the worst the world has to offer. At its heart is a tale of the sacred bonds between fathers and sons, pitch-perfect in style and story, set to dazzle critics and readers alike.'"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fiction_categories = ['Fiction','Nonfiction']\n",
+    "sequence = df.loc[df['new_categories'] == 'Fiction', 'description'].reset_index(drop=True)[0]\n",
+    "sequence"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'sequence': 'A NOVEL THAT READERS and critics have been eagerly anticipating for over a decade, Gilead is an astonishingly imagined story of remarkable lives. John Ames is a preacher, the son of a preacher and the grandson (both maternal and paternal) of preachers. It’s 1956 in Gilead, Iowa, towards the end of the Reverend Ames’s life, and he is absorbed in recording his family’s story, a legacy for the young son he will never see grow up. Haunted by his grandfather’s presence, John tells of the rift between his grandfather and his father: the elder, an angry visionary who fought for the abolitionist cause, and his son, an ardent pacifist. He is troubled, too, by his prodigal namesake, Jack (John Ames) Boughton, his best friend’s lost son who returns to Gilead searching for forgiveness and redemption. Told in John Ames’s joyous, rambling voice that finds beauty, humour and truth in the smallest of life’s details, Gilead is a song of celebration and acceptance of the best and the worst the world has to offer. At its heart is a tale of the sacred bonds between fathers and sons, pitch-perfect in style and story, set to dazzle critics and readers alike.',\n",
+       " 'labels': ['Fiction', 'Nonfiction'],\n",
+       " 'scores': [0.8438270688056946, 0.15617290139198303]}"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pipe(sequence, fiction_categories)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Fiction'"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "max_idx = np.argmax(pipe(sequence, fiction_categories)['scores'])\n",
+    "label = pipe(sequence, fiction_categories)['labels'][max_idx]\n",
+    "label"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def predict_category(sequence,categories):\n",
+    "    pred = pipe(sequence, categories)\n",
+    "    max_idx = np.argmax(pipe(sequence, categories)['scores'])\n",
+    "    label = pred['labels'][max_idx]\n",
+    "    return label"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 300/300 [17:00<00:00,  3.40s/it]\n"
+     ]
+    }
+   ],
+   "source": [
+    "actual_label = []\n",
+    "predicted_label = []\n",
+    "\n",
+    "for i in tqdm(range(0,300)):\n",
+    "    sequence = df.loc[df['new_categories'] == 'Fiction', 'description'].reset_index(drop=True)[i]\n",
+    "    actual_label.append('Fiction')\n",
+    "    predicted_label.append(predict_category(sequence))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 300/300 [18:03<00:00,  3.61s/it]\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in tqdm(range(0,300)):\n",
+    "    sequence = df.loc[df['new_categories'] == 'Nonfiction', 'description'].reset_index(drop=True)[i]\n",
+    "    actual_label.append('Nonfiction')\n",
+    "    predicted_label.append(predict_category(sequence))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>actual_label</th>\n",
+       "      <th>predicted_label</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Fiction</td>\n",
+       "      <td>Fiction</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Fiction</td>\n",
+       "      <td>Fiction</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Fiction</td>\n",
+       "      <td>Fiction</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Fiction</td>\n",
+       "      <td>Nonfiction</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Fiction</td>\n",
+       "      <td>Fiction</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>595</th>\n",
+       "      <td>Nonfiction</td>\n",
+       "      <td>Nonfiction</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>596</th>\n",
+       "      <td>Nonfiction</td>\n",
+       "      <td>Nonfiction</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>597</th>\n",
+       "      <td>Nonfiction</td>\n",
+       "      <td>Nonfiction</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>598</th>\n",
+       "      <td>Nonfiction</td>\n",
+       "      <td>Nonfiction</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>599</th>\n",
+       "      <td>Nonfiction</td>\n",
+       "      <td>Nonfiction</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>600 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    actual_label predicted_label\n",
+       "0        Fiction         Fiction\n",
+       "1        Fiction         Fiction\n",
+       "2        Fiction         Fiction\n",
+       "3        Fiction      Nonfiction\n",
+       "4        Fiction         Fiction\n",
+       "..           ...             ...\n",
+       "595   Nonfiction      Nonfiction\n",
+       "596   Nonfiction      Nonfiction\n",
+       "597   Nonfiction      Nonfiction\n",
+       "598   Nonfiction      Nonfiction\n",
+       "599   Nonfiction      Nonfiction\n",
+       "\n",
+       "[600 rows x 2 columns]"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "predictions = pd.DataFrame({'actual_label': actual_label, 'predicted_label': predicted_label})\n",
+    "predictions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "467"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "correct_predictions = predictions[predictions['actual_label'] == predictions['predicted_label']].shape[0]\n",
+    "correct_predictions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.7783333333333333"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "accuracy = correct_predictions / predictions.shape[0]\n",
+    "accuracy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 1454/1454 [1:17:49<00:00,  3.21s/it]\n"
+     ]
+    }
+   ],
+   "source": [
+    "isbn = []\n",
+    "predicted_category = []\n",
+    "\n",
+    "missing_categories = df.loc[df['new_categories'].isna(), ['isbn13','description']].reset_index(drop=True)\n",
+    "\n",
+    "for i in tqdm(range(0,len(missing_categories))):\n",
+    "    isbn.append(missing_categories['isbn13'][i])\n",
+    "    predicted_category.append(predict_category(missing_categories['description'][i], fiction_categories))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>isbn13</th>\n",
+       "      <th>predicted_category</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>9780002261982</td>\n",
+       "      <td>Fiction</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>9780006280897</td>\n",
+       "      <td>Nonfiction</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>9780006280934</td>\n",
+       "      <td>Nonfiction</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>9780006380832</td>\n",
+       "      <td>Nonfiction</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>9780006470229</td>\n",
+       "      <td>Fiction</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1449</th>\n",
+       "      <td>9788125026600</td>\n",
+       "      <td>Nonfiction</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1450</th>\n",
+       "      <td>9788171565641</td>\n",
+       "      <td>Fiction</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1451</th>\n",
+       "      <td>9788172235222</td>\n",
+       "      <td>Fiction</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1452</th>\n",
+       "      <td>9788173031014</td>\n",
+       "      <td>Nonfiction</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1453</th>\n",
+       "      <td>9788179921623</td>\n",
+       "      <td>Fiction</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1454 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             isbn13 predicted_category\n",
+       "0     9780002261982            Fiction\n",
+       "1     9780006280897         Nonfiction\n",
+       "2     9780006280934         Nonfiction\n",
+       "3     9780006380832         Nonfiction\n",
+       "4     9780006470229            Fiction\n",
+       "...             ...                ...\n",
+       "1449  9788125026600         Nonfiction\n",
+       "1450  9788171565641            Fiction\n",
+       "1451  9788172235222            Fiction\n",
+       "1452  9788173031014         Nonfiction\n",
+       "1453  9788179921623            Fiction\n",
+       "\n",
+       "[1454 rows x 2 columns]"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "predictions = pd.DataFrame({'isbn13': isbn, 'predicted_category': predicted_category})\n",
+    "predictions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "predictions.to_csv('missing_categories_predictions.csv', index=False)\n"
    ]
   },
   {
